Fixed overlapping issue and modified event format

--- a/css/_materialFullCalendar.css
+++ b/css/_materialFullCalendar.css
@@ -47,9 +47,7 @@ Colors: Use the following - https://www.google.com/design/spec/style/color.html#
     border-radius: 4px;
     border: none;
     padding: 5px;
-    opacity: 0.65;
-    left: 5% !important;
-    right: 5% !important;
+    opacity: 1;
   }
   
   /* Bolds the name of the event and inherits the font size */
